compiler/testData/readJavaBinaryClass/kotlinSignature/error/SyntaxError.kt
package test

import java.util.*

public open class SyntaxError : Object() {
    open fun foo() : Int? {
        throw UnsupportedOperationException()
    }
}
